; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_checkout.c_describe_one_orphan.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_checkout.c_describe_one_orphan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.commit = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"  \00", align 1
@DEFAULT_ABBREV = common dso_local global i32 0, align 4
@CMIT_FMT_ONELINE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*, %struct.commit*)* @describe_one_orphan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @describe_one_orphan(%struct.strbuf* %0, %struct.commit* %1) #0 {
  %3 = alloca %struct.strbuf*, align 8
  %4 = alloca %struct.commit*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %3, align 8
  store %struct.commit* %1, %struct.commit** %4, align 8
  %5 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %6 = call i32 @strbuf_addstr(%struct.strbuf* %5, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %7 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %8 = load %struct.commit*, %struct.commit** %4, align 8
  %9 = getelementptr inbounds %struct.commit, %struct.commit* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* @DEFAULT_ABBREV, align 4
  %12 = call i32 @strbuf_add_unique_abbrev(%struct.strbuf* %7, i32* %10, i32 %11)
  %13 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %14 = call i32 @strbuf_addch(%struct.strbuf* %13, i8 signext 32)
  %15 = load %struct.commit*, %struct.commit** %4, align 8
  %16 = call i32 @parse_commit(%struct.commit* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %23, label %18

18:                                               ; preds = %2
  %19 = load i32, i32* @CMIT_FMT_ONELINE, align 4
  %20 = load %struct.commit*, %struct.commit** %4, align 8
  %21 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %22 = call i32 @pp_commit_easy(i32 %19, %struct.commit* %20, %struct.strbuf* %21)
  br label %23

23:                                               ; preds = %18, %2
  %24 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %25 = call i32 @strbuf_addch(%struct.strbuf* %24, i8 signext 10)
  ret void
}

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #1

declare dso_local i32 @strbuf_add_unique_abbrev(%struct.strbuf*, i32*, i32) #1

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #1

declare dso_local i32 @parse_commit(%struct.commit*) #1

declare dso_local i32 @pp_commit_easy(i32, %struct.commit*, %struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
